More fixes for horizontal scroll on mobile.

--- a/app/scss/decorate.scss
+++ b/app/scss/decorate.scss
@@ -1,5 +1,9 @@
 @import 'base';
 
+html {
+  overflow-x: hidden;
+}
+
 h1 {
   font-size: $h1-multiplier * $normal-font-size;
   @include bold;
